[gd_scene load_steps=81 format=3 uid="uid://cxk0mg0y5qdi0"]

[ext_resource type="Script" uid="uid://dut5bplbuvr5v" path="res://Assets/Enemies/UndeadSwordsmanArmour/undead_swordsman.gd" id="1_wteio"]
[ext_resource type="AudioStream" uid="uid://ng77w5d8yleb" path="res://Assets/Resources/PlayerSFX/OGG Files/Giant_Attack.ogg" id="2_3hkv8"]
[ext_resource type="AudioStream" uid="uid://piu8vv1xigev" path="res://Assets/Enemies/SFX/added_sfx/DSGNMisc_MELEE-Sword Slash_HY_PC-004.wav" id="3_2g06f"]
[ext_resource type="Texture2D" uid="uid://woppisagaauf" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Die.png" id="3_m153v"]
[ext_resource type="AudioStream" uid="uid://diforotjr44t7" path="res://Assets/Enemies/SFX/added_sfx/crack01.mp3.ogg" id="4_nrpbe"]
[ext_resource type="Texture2D" uid="uid://bubxl05os68lb" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Attack1.png" id="4_tayrw"]
[ext_resource type="Texture2D" uid="uid://csa4sufwbn2ro" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Hurt.png" id="5_2romr"]
[ext_resource type="Texture2D" uid="uid://bcdu45oih0tks" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Idle.png" id="6_3hkv8"]
[ext_resource type="Texture2D" uid="uid://div4nfk21sdh1" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Walk.png" id="7_2g06f"]
[ext_resource type="Texture2D" uid="uid://bd736e625kui4" path="res://Assets/Enemies/Sprites/Skeletons/Skeleton_Shield/Skeleton_Yellow/Skeleton_With_VFX/Skeleton_03_Yellow_Attack2.png" id="8_nrpbe"]
[ext_resource type="Script" uid="uid://bhaiij1tfp7v6" path="res://Assets/Scripts/hurtbox.gd" id="9_cwup0"]
[ext_resource type="Script" uid="uid://bqjthq5jbw7og" path="res://Assets/Scripts/loot_component.gd" id="9_m153v"]
[ext_resource type="PackedScene" uid="uid://dsyykvmrlnt18" path="res://Assets/Gold/golden_snake.tscn" id="10_m153v"]
[ext_resource type="Script" uid="uid://d3enncgxl66lu" path="res://Assets/Scripts/health_component.gd" id="11_2romr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_t3ldh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_fa6de"]
radius = 13.0
height = 40.0

[sub_resource type="AtlasTexture" id="AtlasTexture_6n8pk"]
atlas = ExtResource("3_m153v")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_02ejy"]
atlas = ExtResource("3_m153v")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaw8d"]
atlas = ExtResource("3_m153v")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcmgd"]
atlas = ExtResource("3_m153v")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qiono"]
atlas = ExtResource("3_m153v")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j5xsa"]
atlas = ExtResource("3_m153v")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6jui"]
atlas = ExtResource("3_m153v")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe8hm"]
atlas = ExtResource("3_m153v")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_43brs"]
atlas = ExtResource("3_m153v")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2fl"]
atlas = ExtResource("4_tayrw")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qh6u"]
atlas = ExtResource("4_tayrw")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_33x06"]
atlas = ExtResource("4_tayrw")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke5d1"]
atlas = ExtResource("4_tayrw")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhfdn"]
atlas = ExtResource("4_tayrw")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8fse5"]
atlas = ExtResource("4_tayrw")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ow4t1"]
atlas = ExtResource("4_tayrw")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uhjqe"]
atlas = ExtResource("4_tayrw")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xijj1"]
atlas = ExtResource("4_tayrw")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndnrm"]
atlas = ExtResource("4_tayrw")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3g3mh"]
atlas = ExtResource("5_2romr")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x4oq5"]
atlas = ExtResource("5_2romr")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rk5vg"]
atlas = ExtResource("5_2romr")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qt1w0"]
atlas = ExtResource("5_2romr")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_csqa6"]
atlas = ExtResource("5_2romr")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_shvug"]
atlas = ExtResource("3_m153v")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmriv"]
atlas = ExtResource("3_m153v")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq0p1"]
atlas = ExtResource("3_m153v")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwy1h"]
atlas = ExtResource("3_m153v")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gsax"]
atlas = ExtResource("3_m153v")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cf2b8"]
atlas = ExtResource("3_m153v")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7bot"]
atlas = ExtResource("3_m153v")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvk4a"]
atlas = ExtResource("3_m153v")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgxu8"]
atlas = ExtResource("3_m153v")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ve60u"]
atlas = ExtResource("6_3hkv8")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ghbq"]
atlas = ExtResource("6_3hkv8")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmaca"]
atlas = ExtResource("6_3hkv8")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f7m6"]
atlas = ExtResource("6_3hkv8")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_40qfj"]
atlas = ExtResource("6_3hkv8")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sgl6f"]
atlas = ExtResource("6_3hkv8")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cig4r"]
atlas = ExtResource("6_3hkv8")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_j58te"]
atlas = ExtResource("6_3hkv8")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iu5gn"]
atlas = ExtResource("7_2g06f")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8dyj"]
atlas = ExtResource("7_2g06f")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxcpg"]
atlas = ExtResource("7_2g06f")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3yxf"]
atlas = ExtResource("7_2g06f")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfc22"]
atlas = ExtResource("7_2g06f")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vl6c2"]
atlas = ExtResource("7_2g06f")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wtol"]
atlas = ExtResource("7_2g06f")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ff8o"]
atlas = ExtResource("7_2g06f")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w6ixr"]
atlas = ExtResource("7_2g06f")
region = Rect2(768, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ckrfw"]
atlas = ExtResource("7_2g06f")
region = Rect2(864, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kow8y"]
atlas = ExtResource("8_nrpbe")
region = Rect2(0, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n281u"]
atlas = ExtResource("8_nrpbe")
region = Rect2(96, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehuly"]
atlas = ExtResource("8_nrpbe")
region = Rect2(192, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nuadk"]
atlas = ExtResource("8_nrpbe")
region = Rect2(288, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qh0js"]
atlas = ExtResource("8_nrpbe")
region = Rect2(384, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mqjq4"]
atlas = ExtResource("8_nrpbe")
region = Rect2(480, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_004cp"]
atlas = ExtResource("8_nrpbe")
region = Rect2(576, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t72ub"]
atlas = ExtResource("8_nrpbe")
region = Rect2(672, 0, 96, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_18mao"]
atlas = ExtResource("8_nrpbe")
region = Rect2(768, 0, 96, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_j4qsk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6n8pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_02ejy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcmgd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qiono")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j5xsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6jui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe8hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_43brs")
}],
"loop": false,
"name": &"arise",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qh6u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_33x06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke5d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhfdn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8fse5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ow4t1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uhjqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xijj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndnrm")
}],
"loop": false,
"name": &"attack",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3g3mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x4oq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rk5vg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qt1w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_csqa6")
}],
"loop": false,
"name": &"damage",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_shvug")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmriv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq0p1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwy1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gsax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cf2b8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7bot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvk4a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgxu8")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ve60u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ghbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmaca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f7m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40qfj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sgl6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cig4r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j58te")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iu5gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8dyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxcpg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3yxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfc22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vl6c2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wtol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ff8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w6ixr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ckrfw")
}],
"loop": true,
"name": &"move",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kow8y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n281u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehuly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nuadk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qh0js")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mqjq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_004cp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t72ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18mao")
}],
"loop": false,
"name": &"thrust",
"speed": 22.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_yc8sv"]
radius = 13.0
height = 40.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_n0o3a"]
radius = 100.0
height = 200.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3hkv8"]
bg_color = Color(0.95046, 0, 0.12541446, 1)

[node name="UndeadSwordsman" type="CharacterBody2D" node_paths=PackedStringArray("nav", "health_component", "loot_component", "health_bar") groups=["enemy"]]
scale = Vector2(0.64, 0.64)
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_wteio")
swordsman_sounds = Array[AudioStream]([ExtResource("2_3hkv8"), ExtResource("3_2g06f"), ExtResource("4_nrpbe")])
nav = NodePath("Nav")
hitbox_shape = SubResource("CircleShape2D_t3ldh")
speed = 100.0
health_component = NodePath("HealthComponent")
loot_component = NodePath("LootComponent")
damage = 18.0
health_bar = NodePath("ProgressBar")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_fa6de")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_j4qsk")
animation = &"damage"

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D"]
script = ExtResource("9_cwup0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_yc8sv")

[node name="Nav" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true

[node name="Range" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Range"]
scale = Vector2(0.6, 0.6)
shape = SubResource("CapsuleShape2D_n0o3a")

[node name="LootComponent" type="Node" parent="."]
script = ExtResource("9_m153v")
item_drop_scene = ExtResource("10_m153v")
metadata/_custom_type_script = "uid://bqjthq5jbw7og"

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("11_2romr")
max_health = 150.0
defense = 1.5
metadata/_custom_type_script = "uid://d3enncgxl66lu"

[node name="swordsmanSfx" type="AudioStreamPlayer2D" parent="."]
volume_db = -10.0

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = -18.0
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_3hkv8")
show_percentage = false

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
